Updated hTML version of cif_pow.dic

--- a/cif_pow.dic.html
+++ b/cif_pow.dic.html
@@ -734,7 +734,7 @@ asciidoc.install(2);
 <body class="article">
 <div id="header">
 <h1>CIF_POW</h1>
-<span id="revdate">2016-11-09</span>
+<span id="revdate">2016-11-12</span>
 </div>
 <div id="content">
 <div id="preamble">
@@ -744,7 +744,7 @@ powder diffraction studies. Note that unlike most IUCr CIF
 dictionaries, the dataname is not always constructed as
 &lt;category&gt;.&lt;object&gt;</p></div>
 <div class="paragraph"><p>This dictionary builds on definitions found in CIF_CORE.</p></div>
-<div class="paragraph"><p>Generated from /home/jrh/COMCIFS/cif_core/cif_pow.dic, version 2.1</p></div>
+<div class="paragraph"><p>Generated from /home/jrh/COMCIFS/cif_core/cif_pow.dic, version 2.2</p></div>
 <div class="paragraph"><p>Categories that may have more than one row are called loop categories.
 Datanames making up the keys for these categories have a dot suffix.</p></div>
 <div id="toc">
@@ -1007,6 +1007,12 @@ Calibration is done by adding the offset:</p></div>
 <div class="title">Aliases</div>
 <div class="paragraph"><p><code>_pd_calib_2theta_offset</code><br /></p></div>
 </div></div>
+</div>
+<div class="sect2">
+<h3 id="_pd_calib_offset_detector_id">_pd_calib_offset.detector_id&#8226;</h3>
+<div class="paragraph"><p>The detector to which the offset values relate.
+As a default value is defined, the detector id may be
+omitted if only a single detector is present.</p></div>
 </div>
 <div class="sect2">
 <h3 id="_pd_calib_offset_id">_pd_calib_offset.id&#8226;</h3>
@@ -3726,7 +3732,7 @@ contains the current reflection. This code must match a
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2016-11-09 16:29:35 AEDT
+ 2016-11-12 19:08:28 AEDT
 </div>
 </div>
 </body>
