Updated restraints dictionary.

--- a/cif_rstr.dic.html
+++ b/cif_rstr.dic.html
@@ -783,6 +783,7 @@ whether items have been restrained or constrained:
 <a href="#_atom_site_refinement_flags_occupation"><code>_atom_site_refinement_flags_occupation</code></a>
 <a href="#_atom_site_refinement_flags_posn"><code>_atom_site_refinement_flags_posn</code></a>
 <a href="#_atom_site_restraints"><code>_atom_site_restraints</code></a></p></div>
+<div class="paragraph"><p>This dictionary builds on definitions found in CIF_CORE.</p></div>
 <div class="paragraph"><p>Generated from /home/jrh/COMCIFS/cif_core/cif_rstr.dic, version 3.1</p></div>
 <div class="paragraph"><p>Categories that may have more than one row are called loop categories.
 Datanames making up the keys for these categories have a dot suffix.</p></div>
@@ -2695,7 +2696,7 @@ The default value of zero represents a constraint.</p></div>
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2016-11-15 15:23:24 AEDT
+ 2016-11-16 11:28:58 AEDT
 </div>
 </div>
 </body>
