Added DRAFT warning at top of Topology dictionary

--- a/Topology.dic.html
+++ b/Topology.dic.html
@@ -741,7 +741,8 @@ asciidoc.install(2);
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph"><p>The Topology CIF dictionary provides datanames for describing crystal structure
-topology.</p></div>
+topology.  This is a DRAFT version and datanames in this dictionary should not
+be used until approval by COMCIFS.</p></div>
 <div class="paragraph"><p>Generated from /home/jrh/COMCIFS/Topology/TopoCif/Topology.dic, version 0.1</p></div>
 <div class="paragraph"><p>Categories that may have more than one row are called loop categories.
 Datanames making up the keys for these categories have a dot suffix.</p></div>
@@ -1391,7 +1392,7 @@ numbers of the faces of a given size in the tile.</p></div>
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2018-02-05 15:15:08 AEDT
+ 2018-02-05 15:18:49 AEDT
 </div>
 </div>
 </body>
