Updated Topology dictionary.

--- a/Topology.dic.html
+++ b/Topology.dic.html
@@ -981,9 +981,9 @@ coordinates after application of the symmetry operation given by
 <a href="#_topol_link_site_symmetry_symop_1"><code>_topol_link.site_symmetry_symop_1</code></a> to generate the node used in
 calculating the link.  For example, if the symmetry operation
 referred to by <a href="#_topol_link_site_symmetry_symop_id"><code>_topol_link.site_symmetry_symop_id</code></a> is
-(x-1/2,y+1/2,z), the translation vector is [0, 1, 0] and the
+(x-1/2,y+1/2,z), the translation vector is [0, -1, 0] and the
 original position is (0.2,0.7,1.0) in fractional coordinates,
-then the resultant position is (-0.3,1.2,1.0).</p></div>
+then the resultant position is (-0.3,0.2,1.0).</p></div>
 </div>
 <div class="sect2">
 <h3 id="_topol_link_site_symmetry_translation_2">_topol_link.site_symmetry_translation_2</h3>
@@ -992,9 +992,9 @@ coordinates after application of the symmetry operation given by
 <a href="#_topol_link_site_symmetry_symop_2"><code>_topol_link.site_symmetry_symop_2</code></a> to generate the node used in
 calculating the link.  For example, if the symmetry operation
 referred to by <a href="#_topol_link_site_symmetry_symop_2"><code>_topol_link.site_symmetry_symop_2</code></a> is
-(x-1/2,y+1/2,z), the translation vector is [0, 1, 0] and the
+(x-1/2,y+1/2,z), the translation vector is [0, -1, 0] and the
 original position is (0.2,0.7,1.0) in fractional coordinates,
-then the resultant position is (-0.3,1.2,1.0).</p></div>
+then the resultant position is (-0.3,0.2,1.0).</p></div>
 </div>
 <div class="sect2">
 <h3 id="_topol_link_type">_topol_link.type</h3>
@@ -1450,9 +1450,11 @@ no special type is assigned
 <div class="sect1">
 <h2 id="topol_repres_entangl_ERN">TOPOL_REPRES_ENTANGL_ERN</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>Topology of the entanglement described as an extended ring  net (ERN).
-The name of the extended ring net is specified in one or more of the
-standard nomenclatures.</p></div>
+<div class="paragraph"><p>Topology of the entanglement described as an extended ring net
+(ERN).  The name of the extended ring net is specified in one or
+more of the standard nomenclatures.For more information on ERN
+see Alexandrov E.V., Blatov V.A., Proserpio D.M. CrystEngComm,
+2017, 19, 1993-2006.</p></div>
 <div class="sect2">
 <h3 id="_topol_repres_entangl_ERN_name">_topol_repres_entangl_ERN.name</h3>
 <div class="paragraph"><p>The symbol or name of the extended ring net in the specified nomenclature.</p></div>
@@ -1513,9 +1515,11 @@ Non-standard identifier
 <div class="sect1">
 <h2 id="topol_repres_entangl_HRN">TOPOL_REPRES_ENTANGL_HRN</h2>
 <div class="sectionbody">
-<div class="paragraph"><p>Topology of the entanglement described as a Hopf ring  net (HRN).
-The name of the extended ring net is specified in one or more of the
-standard nomenclatures.</p></div>
+<div class="paragraph"><p>Topology of the entanglement described as a Hopf ring net (HRN).
+The name of the extended ring net is specified in one or more of
+the standard nomenclatures.For more information on HRN see
+Alexandrov E.V., Blatov V.A., Proserpio D.M. Acta Cryst. 2012,
+A68, 484-493.</p></div>
 <div class="sect2">
 <h3 id="_topol_repres_entangl_HRN_name">_topol_repres_entangl_HRN.name</h3>
 <div class="paragraph"><p>The symbol or name of the Hopf ring net in the specified nomenclature.</p></div>
@@ -1903,7 +1907,7 @@ TOPOL_REPRES_TILING category for further information.</p></div>
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2018-04-05 11:45:14 AEST
+ 2018-04-05 14:44:56 AEST
 </div>
 </div>
 </body>
